--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        this is git class
+        this is child branch created by bhanu sanjeev
     </h1>
 </body>
 </html>
