changes are done in parent brach

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>
-        this is git class
+        this is git class , and added a new child branch 
+        
     </h1>
 </body>
 </html>
